--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1607,8 +1607,8 @@
     "hide": "Hide",
     "hideAll": "Hide all",
     "showAll": "Show all",
-    "grid": "Grid layout",
-    "cascade": "Cascade layout",
+    "gridLayout": "Grid layout",
+    "cascadeLayout": "Cascade layout",
     "hideLabels": "Hide labels in edit mode",
     "showLabels": "Show labels",
     "CreateSubstationInVoltageLevelIdenticalId": "Voltage Level ID can not match Substation ID",
