--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1604,8 +1604,8 @@
     "hide": "Masquer",
     "hideAll": "Tout masquer",
     "showAll": "Tout afficher",
-    "grid": "Disposition en grille",
-    "cascade": "Disposition en cascade",
+    "gridLayout": "Disposition en grille",
+    "cascadeLayout": "Disposition en cascade",
     "hideLabels": "Masquer les libellés en mode edition",
     "showLabels": "Afficher les libellés",
     "CreateSubstationInVoltageLevelIdenticalId": "L'ID du poste doit être différent de celui du site",
