--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1700,8 +1700,9 @@
     "activePowerControlTooltip": "Clé de distribution de la puissance au nœud bilan : maxP/Statisme, statisme par défaut = 4 (valable pour le mode compensation proportionnel à la puissance maximale des groupes)",
     "ActivePower": "P (MW)",
     "reactivePowerTooltip": "Q (MVar)",
-
     "tooltip.u": "U (kV)",
+    "tooltip.umin": "Umin (kV)",
+    "tooltip.umax": "Umax (kV)",
     "tooltip.angle": "θ (°)",
     "tooltip.generation": "Production (MW)",
     "tooltip.load": "Consommation (MW)",
