--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1707,6 +1707,14 @@
     "activePowerControlTooltip": "Slack bus active power repartition key: maxP/droop, default droop = 4 (used if balanceType is PROPORTIONAL_TO_GENERATION_P_MAX)",
     "ActivePower": "P (MW)",
     "reactivePowerTooltip": "Q (MVar)",
+    "tooltip.u": "U (kV)",
+    "tooltip.umin": "Umin (kV)",
+    "tooltip.umax": "Umax (kV)",
+    "tooltip.angle": "θ (°)",
+    "tooltip.generation": "Generation (MW)",
+    "tooltip.load": "Load (MW)",
+    "tooltip.balance": "Balance (MW)",
+    "tooltip.icc": "Isc (kA)",
     "activePowerSetPointTooltip":"Pcons (MW)",
     "plannedActivePowerSetPointTooltip": "Pimp (MW)",
     "reactivePowerSetpointTooltip":"Qcons (MW)",
