display load tooltip (#3562)
* display load tooltip
 
---------

Signed-off-by: SOUISSI Maissa (Externe) <souissimai@gm0winl878.bureau.si.interne>

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1714,5 +1714,7 @@
     "MinimumActivePowerTooltip": "Pmin (MW)",
     "MaximumActivePowerTooltip": "Pmax (MW)",
     "MinimumReactivePowerTooltip": "Pmin (MW)",
-    "MaximumReactivePowerTooltip": "Pmax (MW)"
+    "MaximumReactivePowerTooltip": "Pmax (MW)",
+    "ConsQ": "Qcons (Mvar)",
+    "ConsP": "Pcons (MW)"
 }
