--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1602,6 +1602,10 @@
     "searchVoltageLevelInNad": "Rechercher un poste",
     "noResultsFound": "Aucun résultat trouvé",
     "hide": "Masquer",
+    "hideAll": "Tout masquer",
+    "showAll": "Tout afficher",
+    "gridLayout": "Disposition en grille",
+    "cascadeLayout": "Disposition en cascade",
     "hideLabels": "Masquer les libellés en mode edition",
     "showLabels": "Afficher les libellés",
     "CreateSubstationInVoltageLevelIdenticalId": "L'ID du poste doit être différent de celui du site",
@@ -1716,5 +1720,9 @@
     "MinimumReactivePowerTooltip": "Pmin (MW)",
     "MaximumReactivePowerTooltip": "Pmax (MW)",
     "ConsQ": "Qcons (Mvar)",
-    "ConsP": "Pcons (MW)"
+    "ConsP": "Pcons (MW)",
+    "removeAll": "Tout fermer",
+    "removeAllAssociatedSldsConfirmation": "Êtes-vous sûr de vouloir fermer tous les postes associés ?",
+    "createNewNAD": "Créer un nouveau NAD",
+    "existingNAD": "NAD existant"
 }
