Fix Mvar and min labels
Signed-off-by: BOUTIER Charly <charly.boutier@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -148,14 +148,14 @@
     "ActivePowerT3WSide2": "p2 (MW)",
     "ActivePowerT3WSide3": "p3 (MW)",
     "ActivePowerSide3": "p3 (MW)",
-    "ReactivePower": "q (MVar)",
+    "ReactivePower": "q (Mvar)",
     "p0": "Constant p (MW)",
-    "q0": "Constant q (MVar)",
-    "ReactivePowerSide1": "q1 (MVar)",
-    "ReactivePowerSide2": "q2 (MVar)",
-    "ReactivePowerT3WSide1": "q1 (MVar)",
-    "ReactivePowerT3WSide2": "q2 (MVar)",
-    "ReactivePowerT3WSide3": "q3 (MVar)",
+    "q0": "Constant q (Mvar)",
+    "ReactivePowerSide1": "q1 (Mvar)",
+    "ReactivePowerSide2": "q2 (Mvar)",
+    "ReactivePowerT3WSide1": "q1 (Mvar)",
+    "ReactivePowerT3WSide2": "q2 (Mvar)",
+    "ReactivePowerT3WSide3": "q3 (Mvar)",
     "r": "Series resistance (Ω)",
     "x": "Series reactance (Ω)",
     "g1": "Shunt conductance 1 (μS)",
@@ -169,8 +169,8 @@
     "shuntSusceptance": "B (µS)",
     "ActivePowerControl": "Active power control",
     "DroopColumnName": "Droop (%)",
-    "reactivePowerSetpoint": "target Q (MVar)",
-    "targetQ": "target Q (MVar)",
+    "reactivePowerSetpoint": "target Q (Mvar)",
+    "targetQ": "target Q (Mvar)",
     "RatioTap": "Ratio tap",
     "PhaseTap": "Phase tap",
     "RatioTap1": "Ratio tap 1",
@@ -190,7 +190,7 @@
     "ReactiveSlacks": "Reactive slacks",
     "TotalInjection": "Total injection",
     "TotalConsumption": "Total consumption",
-    "Slack": "Slack (MVar)",
+    "Slack": "Slack (Mvar)",
     "BusId": "Bus ID",
     "BusVoltages": "Calculated voltage profile",
     "BusVoltage": "Voltage (kV)",
@@ -492,7 +492,7 @@
 
     "loadType": "Type",
     "ConstantP": "Constant p (MW)",
-    "ConstantQ": "Constant q (MVar)",
+    "ConstantQ": "Constant q (Mvar)",
     "DanglingLines": "Dangling Lines",
     "PairingKey": "UCTE Xnode",
     "HvdcLines": "HVDC Lines",
@@ -778,7 +778,7 @@
     "Reactor": "Reactor",
     "Capacitor": "Capacitor",
     "QatNominalV": "Q at nominal voltage",
-    "QatNominalVLabel": "Q at nominal voltage (MVar)",
+    "QatNominalVLabel": "Q at nominal voltage (Mvar)",
     "ModeAutomaton": "Mode",
     "StandbyAutomaton": "Standby",
     "StandbyNotAvailable": "Standby only available in voltage regulation mode",
@@ -1139,7 +1139,7 @@
     "voltageSetpoint": "Target V (kV)",
     "targetV": "Target V (kV)",
     "VoltageSetpointKV": "Voltage set point (kV)",
-    "ReactivePowerSetpointMVAR": "Reactive power set point (MVar)",
+    "ReactivePowerSetpointMVAR": "Reactive power set point (Mvar)",
     "RatioTapChangerPosition": "Ratio tap",
     "Leg": "Leg",
     "Transformers": "Transformers",
@@ -1710,7 +1710,7 @@
     "history": "History",
     "activePowerControlTooltip": "Slack bus active power repartition key: maxP/droop, default droop = 4 (used if balanceType is PROPORTIONAL_TO_GENERATION_P_MAX)",
     "ActivePower": "P (MW)",
-    "reactivePowerTooltip": "Q (MVar)",
+    "reactivePowerTooltip": "Q (Mvar)",
     "tooltip.u": "U (kV)",
     "tooltip.umin": "Umin (kV)",
     "tooltip.umax": "Umax (kV)",
