--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -148,14 +148,14 @@
     "ActivePowerT3WSide2": "p2 (MW)",
     "ActivePowerT3WSide3": "p3 (MW)",
     "ActivePowerSide3": "p3 (MW)",
-    "ReactivePower": "q (MVar)",
-    "q0": "Q constant (MVar)",
+    "ReactivePower": "q (Mvar)",
+    "q0": "Q constant (Mvar)",
     "p0": "P constant (MW)",
-    "ReactivePowerSide1": "q1 (MVar)",
-    "ReactivePowerSide2": "q2 (MVar)",
-    "ReactivePowerT3WSide1": "q1 (MVar)",
-    "ReactivePowerT3WSide2": "q2 (MVar)",
-    "ReactivePowerT3WSide3": "q3 (MVar)",
+    "ReactivePowerSide1": "q1 (Mvar)",
+    "ReactivePowerSide2": "q2 (Mvar)",
+    "ReactivePowerT3WSide1": "q1 (Mvar)",
+    "ReactivePowerT3WSide2": "q2 (Mvar)",
+    "ReactivePowerT3WSide3": "q3 (Mvar)",
     "r": "Résistance série (Ω)",
     "x": "Réactance série (Ω)",
     "g1": "Conductance parallèle 1 (μS)",
@@ -169,8 +169,8 @@
     "shuntSusceptance": "B (µS)",
     "ActivePowerControl": "En compensation",
     "DroopColumnName": "Participation (%)",
-    "reactivePowerSetpoint": "Q consigne (MVar)",
-    "targetQ": "Q consigne (MVar)",
+    "reactivePowerSetpoint": "Q consigne (Mvar)",
+    "targetQ": "Q consigne (Mvar)",
     "RatioTap": "Prise régleur",
     "PhaseTap": "Prise déphaseur",
     "RatioTap1": "Plot régleur 1",
@@ -190,7 +190,7 @@
     "ReactiveSlacks": "Investissements réactifs",
     "TotalInjection": "Somme injection",
     "TotalConsumption": "Somme soutirage",
-    "Slack": "Investissement (MVar)",
+    "Slack": "Investissement (Mvar)",
     "BusId": "ID Nœud",
     "BusVoltages": "Plan de tension calculé",
     "BusVoltage": "Tension (kV)",
@@ -490,7 +490,7 @@
     "selectionType": "Type de sélection",
     "loadType": "Type",
     "ConstantP": "P constant (MW)",
-    "ConstantQ": "Q constant (MVar)",
+    "ConstantQ": "Q constant (Mvar)",
     "DanglingLines": "Lignes frontières",
     "PairingKey": "Xnode UCTE",
     "HvdcLines": "Lignes HVDC",
@@ -773,7 +773,7 @@
     "Reactor": "Réactance",
     "Capacitor": "Condensateur",
     "QatNominalV": "Q à tension nominale",
-    "QatNominalVLabel": "Q à Unom (MVar)",
+    "QatNominalVLabel": "Q à Unom (Mvar)",
     "ModeAutomaton": "Mode",
     "StandbyAutomaton": "En veille",
     "StandbyNotAvailable": "La mise en veille n'est possible qu'en mode de réglage de tension",
@@ -1136,7 +1136,7 @@
     "voltageSetpoint": "Consigne tension (kV)",
     "targetV": "Consigne tension (kV)",
     "VoltageSetpointKV": "Consigne tension (kV)",
-    "ReactivePowerSetpointMVAR": "Consigne puissance réactive (MVar)",
+    "ReactivePowerSetpointMVAR": "Consigne puissance réactive (Mvar)",
     "RatioTapChangerPosition": "Prise régleur",
     "Leg": "Enroulement",
     "Transformers": "Transformateurs",
@@ -1703,7 +1703,7 @@
     "history": "Historique",
     "activePowerControlTooltip": "Clé de distribution de la puissance au nœud bilan : maxP/Statisme, statisme par défaut = 4 (valable pour le mode compensation proportionnel à la puissance maximale des groupes)",
     "ActivePower": "P (MW)",
-    "reactivePowerTooltip": "Q (MVar)",
+    "reactivePowerTooltip": "Q (Mvar)",
     "tooltip.u": "U (kV)",
     "tooltip.umin": "Umin (kV)",
     "tooltip.umax": "Umax (kV)",
