Add withoutunit labels for series resistance, reactance, and other parameters in localization files
Signed-off-by: achour94 <berrahmaachour@gmail.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -157,7 +157,9 @@
     "ReactivePowerT3WSide2": "q2 (MVar)",
     "ReactivePowerT3WSide3": "q3 (MVar)",
     "r": "Series resistance (Ω)",
+    "withoutunit.r": "Series resistance",
     "x": "Series reactance (Ω)",
+    "withoutunit.x": "Series reactance",
     "g1": "Shunt conductance 1 (μS)",
     "b1": "Shunt susceptance 1 (μS)",
     "g2": "Shunt conductance 2 (μS)",
@@ -725,13 +727,16 @@
     "ShortCircuitCurrentLimitMustBeGreaterOrEqualToZero": "Short-circuit current limit must be greater than or equal to 0",
     "ShortCircuitCurrentLimitMinMaxError": "Low short-circuit current limit must be less than or equal to high limit",
     "directTransX": "Transient reactance (Ω)",
+    "withoutunit.directTransX": "Transient reactance",
     "TransientReactanceForm": "Transient reactance",
     "stepUpTransformerX": "Transformer reactance (Ω)",
+    "withoutunit.stepUpTransformerX": "Transformer reactance",
     "TransformerReactanceForm": "Transformer reactance",
     "FrequencyRegulation": "Active power regulation",
     "Droop": "Droop",
     "PlannedActivePowerSetPointForm": "Planning active power set point",
     "plannedActivePowerSetPoint": "Planning P (MW)",
+    "withoutunit.plannedActivePowerSetPoint": "Planning P",
     "MarginalCost": "Generation dispatch cost",
     "plannedOutageRate": "Planning outage rate",
     "forcedOutageRate": "Forced outage rate",
@@ -1289,7 +1294,9 @@
     "deleteSubTreeConfirmation": "\"{nodeName}\" {nodesNumber, plural, =0 {will be deleted.} =1 {and its subtree with one node will be deleted.} other {and its subtree with # nodes will be deleted.}}",
 
     "ipMin": "ISC min (kA)",
+    "withoutunit.ipMin": "ISC min",
     "ipMax": "ISC max (kA)",
+    "withoutunit.ipMax": "ISC max",
     "marginalCost": "Startup cost",
 
     "dialog.button.leave": "Leave",
@@ -1326,7 +1333,9 @@
     "side1InverterSide2Rectifier": "Flow (Side2->Side1)",
 
     "g": "Magnetizing conductance (μS)",
+    "withoutunit.g": "Magnetizing conductance",
     "b": "Magnetizing susceptance (μS)",
+    "withoutunit.b": "Magnetizing susceptance",
     "ratedNominalPower": "Rated nominal power (MVA)",
     "ratedS": "Rated nominal power (MVA)",
 
@@ -1395,6 +1404,7 @@
     "modificationsAlreadyApplied": "The modifications have already been applied",
     "nominalVoltage": "Nominal voltage (kV)",
     "nominalV": "Nominal voltage (kV)",
+    "withoutUnit.nominalV": "Nominal voltage",
     "lowVoltageLimit": "Low voltage limit (kV)",
     "highVoltageLimit": "High voltage limit (kV)",
     "SingleEquipment": "Single equipment",
