--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -157,7 +157,9 @@
     "ReactivePowerT3WSide2": "q2 (MVar)",
     "ReactivePowerT3WSide3": "q3 (MVar)",
     "r": "Résistance série (Ω)",
+    "withoutunit.r": "Résistance série",
     "x": "Réactance série (Ω)",
+    "withoutunit.x": "Réactance série",
     "g1": "Conductance parallèle 1 (μS)",
     "b1": "Susceptance parallèle 1 (μS)",
     "g2": "Conductance parallèle 2 (μS)",
@@ -720,13 +722,16 @@
     "ShortCircuitCurrentLimitMustBeGreaterOrEqualToZero": "Une limite d'ICC doit être supérieure ou égale à 0",
     "ShortCircuitCurrentLimitMinMaxError": "La limite ICC min doit être inférieure ou égale à la limite ICC max",
     "directTransX": "Réactance transitoire (Ω)",
+    "withoutunit.directTransX": "Réactance transitoire",
     "TransientReactanceForm": "Réactance transitoire",
     "stepUpTransformerX": "Réactance du transformateur (Ω)",
+    "withoutunit.stepUpTransformerX": "Réactance du transformateur",
     "TransformerReactanceForm": "Réactance du transformateur",
     "FrequencyRegulation": "Compensation",
     "Droop": "Statisme",
     "PlannedActivePowerSetPointForm": "Puissance imposée",
     "plannedActivePowerSetPoint": "P imposée (MW)",
+    "withoutunit.plannedActivePowerSetPoint": "P imposée",
     "MarginalCost": "Coût de démarrage",
     "plannedOutageRate": "Indisponibilité programmée",
     "forcedOutageRate": "Indisponibilité fortuite",
@@ -1289,7 +1294,9 @@
     "deleteSubTreeConfirmation": "\"{nodeName}\" {nodesNumber, plural, =0 {va être supprimé.} =1 {et son sous-arbre contenant un nœud vont être supprimés} other {et son sous-arbre contenant # nœuds vont être supprimés.}}",
 
     "ipMin": "ICC min (kA)",
+    "withoutunit.ipMin": "ICC min",
     "ipMax": "ICC max (kA)",
+    "withoutunit.ipMax": "ICC max",
     "marginalCost": "Coût de démarrage",
 
     "Connect": "Reconnexion ?",
@@ -1327,7 +1334,9 @@
     "shuntCompensatorName": "Nom du MCS",
     "connectedToHvdc": "Connecté à HVDC",
     "g": "Conductance magnétisante (μS)",
+    "withoutunit.g": "Conductance magnétisante",
     "b": "Susceptance magnétisante (μS)",
+    "withoutunit.b": "Susceptance magnétisante",
     "ratedNominalPower": "Puissance nominale (MVA)",
     "ratedS": "Puissance nominale (MVA)",
 
@@ -1394,6 +1403,7 @@
     "modificationsAlreadyApplied": "Les modifications ont déjà été appliquées",
     "nominalVoltage": "Tension nominale (kV)",
     "nominalV": "Tension nominale (kV)",
+    "withoutUnit.nominalV": "Tension nominale",
     "lowVoltageLimit": "Limite tension basse (kV)",
     "highVoltageLimit": "Limite tension haute (kV)",
     "SingleEquipment": "Un ouvrage",
