change snack info translations

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -28,14 +28,14 @@
     "moveStudyNotification": "The study has been moved from {oldStudyPath} to {studyPath}",
 
     "copiedNodeInvalidationMsg": "Clipboard content cleared due to changes in nodes",
-    "copiedNodeInvalidationMsgFromOtherStudy": "Clipboard content cleared due to changes in nodes in another study",
+    "copiedNodeInvalidationMsgFromOtherStudy": "Clipboard content cleared due to changes in nodes in another tab",
     "copiedNodeInvalidationMsgFromStudyClosure": "Clipboard content cleared due to a study being closed",
-    "copiedNodeUpdateMsg": "Clipboard content updated after copying a node in another study",
+    "copiedNodeUpdateMsg": "Clipboard content updated after copying a node in another tab",
 
     "copiedModificationsInvalidationMsg": "Clipboard content cleared due to changes in modifications",
-    "copiedModificationsInvalidationMsgFromOtherStudy": "Clipboard content cleared due to changes in modifications in another study",
+    "copiedModificationsInvalidationMsgFromOtherStudy": "Clipboard content cleared due to changes in modifications in another tab",
     "copiedModificationsInvalidationMsgFromStudyClosure": "Clipboard content cleared due to a study being closed",
-    "copiedModificationsUpdateMsg": "Clipboard content updated after copying modifications in another study",
+    "copiedModificationsUpdateMsg": "Clipboard content updated after copying modifications in another tab",
 
     "exportNetwork": "Export the network",
     "export": "Export",
@@ -1659,14 +1659,14 @@
     "BUILDING": "Building",
     "allBusbarSections": "All",
     "allOptionHelperText": "Busbars have different sections (number or index)",
-    "enableNavigationSync" : "Enable multi-tab tree navigation",
-    "disableNavigationSync" : "Disable multi-tab tree navigation",
+    "enableNavigationSync": "Enable multi-tab tree navigation",
+    "disableNavigationSync": "Disable multi-tab tree navigation",
     "loadflowModificationsTapIn": "Initial tap",
     "loadflowModificationsTapOut": "Final tap",
     "loadflowModificationsSectionCountIn": "Initial section",
     "loadflowModificationsSectionCountOut": "Final section",
     "loadflowModifications": "Loadflow modification",
-    "loadFlowModificationDetails":"Details",
+    "loadFlowModificationDetails": "Details",
     "PHASE_TAP": "Phase",
     "RATIO_TAP": "Ratio",
     "Insert": "Insert",
@@ -1693,11 +1693,11 @@
     "equipmentID": "Equipment ID",
     "voltageLevelNominalVoltageMinValueError": "Nominal voltage must be greater than low voltage limit and less than high voltage limit",
     "voltageLevelNominalVoltageMaxValueError": "Low voltage limit must be inferior to high voltage limit",
-    "generatorMinimumActivePowerMaxValueError" : "Minimum active power must be inferior to maximum active power",
+    "generatorMinimumActivePowerMaxValueError": "Minimum active power must be inferior to maximum active power",
     "PccMinTri": "Pcc min (MVA) ",
     "IccMinTri": "Icc min (kA)",
     "rOhm": "r (Ω)",
-    "xOhm":"x (Ω)",
+    "xOhm": "x (Ω)",
     "importParameters": "Import parameters",
     "workspaces": "Workspaces",
     "resetWorkspaceConfirmation": "Are you sure you want to reset this workspace? All open panels will be closed.",
@@ -1719,9 +1719,9 @@
     "tooltip.load": "Load (MW)",
     "tooltip.balance": "Balance (MW)",
     "tooltip.icc": "Isc (kA)",
-    "activePowerSetPointTooltip":"Pcons (MW)",
+    "activePowerSetPointTooltip": "Pcons (MW)",
     "plannedActivePowerSetPointTooltip": "Pimp (MW)",
-    "reactivePowerSetpointTooltip":"Qcons (MW)",
+    "reactivePowerSetpointTooltip": "Qcons (MW)",
     "MinimumActivePowerTooltip": "Pmin (MW)",
     "MaximumActivePowerTooltip": "Pmax (MW)",
     "MinimumReactivePowerTooltip": "Pmin (MW)",
@@ -1736,5 +1736,4 @@
     "unbuildAllNodesDialogTitle": "Confirmation",
     "unbuildAllNodesDialogContent": "All built networks for all nodes of the tree and all root networks as well as all calculation results will be deleted",
     "unbuildAllNodesError": "An error occurred while unbuilding all nodes"
-
 }
