--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -28,14 +28,14 @@
     "moveStudyNotification": "L'étude a été déplacée de {oldStudyPath} à {studyPath}",
 
     "copiedNodeInvalidationMsg": "Contenu du presse-papier supprimé, suite à un changement dans les noeuds",
-    "copiedNodeInvalidationMsgFromOtherStudy": "Contenu du presse-papier supprimé, suite à un changement dans les noeuds dans une autre étude",
+    "copiedNodeInvalidationMsgFromOtherStudy": "Contenu du presse-papier supprimé, suite à un changement dans les noeuds dans un autre onglet",
     "copiedNodeInvalidationMsgFromStudyClosure": "Contenu du presse-papier supprimé, suite à la fermeture d'une étude",
-    "copiedNodeUpdateMsg": "Contenu du presse-papier mis à jour, suite à la copie d'un noeud dans une autre étude",
+    "copiedNodeUpdateMsg": "Contenu du presse-papier mis à jour, suite à la copie d'un noeud dans un autre onglet",
 
     "copiedModificationsInvalidationMsg": "Contenu du presse-papier supprimé, suite à un changement dans les modifications",
-    "copiedModificationsInvalidationMsgFromOtherStudy": "Contenu du presse-papier supprimé, suite à un changement dans les modifications dans une autre étude",
+    "copiedModificationsInvalidationMsgFromOtherStudy": "Contenu du presse-papier supprimé, suite à un changement dans les modifications dans un autre onglet",
     "copiedModificationsInvalidationMsgFromStudyClosure": "Contenu du presse-papier supprimé, suite à la fermeture d'une étude",
-    "copiedModificationsUpdateMsg": "Contenu du presse-papier mis à jour, suite à la copie de modifications dans une autre étude",
+    "copiedModificationsUpdateMsg": "Contenu du presse-papier mis à jour, suite à la copie de modifications dans un autre onglet",
 
     "exportNetwork": "Exporter le réseau",
     "export": "Exporter",
@@ -1688,11 +1688,11 @@
     "equipmentID": "ID de l'ouvrage",
     "voltageLevelNominalVoltageMinValueError": "La tension nominale doit être comprise entre la limite de tension basse et la limite de tension haute",
     "voltageLevelNominalVoltageMaxValueError": "La limite de tension basse doit être inférieure à celle de tension haute",
-    "generatorMinimumActivePowerMaxValueError" : "La puissance active min doit être inférieure à la puissance active max",
+    "generatorMinimumActivePowerMaxValueError": "La puissance active min doit être inférieure à la puissance active max",
     "PccMinTri": "Pcc min (MVA) ",
     "IccMinTri": "Icc min (kA)",
     "rOhm": "r (Ω)",
-    "xOhm":"x (Ω)",
+    "xOhm": "x (Ω)",
     "importParameters": "Paramètres d'import",
     "workspaces": "Espaces",
     "resetWorkspaceConfirmation": "Êtes-vous sûr de vouloir réinitialiser cet espace de travail ? Tous les panneaux ouverts seront fermés.",
@@ -1712,9 +1712,9 @@
     "tooltip.load": "Consommation (MW)",
     "tooltip.balance": "Bilan (MW)",
     "tooltip.icc": "Icc (kA)",
-    "activePowerSetPointTooltip":"Pcons (MW)",
+    "activePowerSetPointTooltip": "Pcons (MW)",
     "plannedActivePowerSetPointTooltip": "Pimp (MW)",
-    "reactivePowerSetpointTooltip":"Qcons (MW)",
+    "reactivePowerSetpointTooltip": "Qcons (MW)",
     "MinimumActivePowerTooltip": "Pmin (MW)",
     "MaximumActivePowerTooltip": "Pmax (MW)",
     "MinimumReactivePowerTooltip": "Pmin (MW)",
