clarification of the global filters UI with substationOrVoltageLevelFilter (#3616)
Signed-off-by: Mathieu DEHARBE <mathieu.deharbe@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -450,13 +450,16 @@
     "ComputationResultsLogs": "Logs",
 
     "results.globalFilter.categories": "Categories",
+    "results.globalFilter.categoriesHelp": "Filtering is performed using a logical AND across categories, then a logical OR among filters belonging to the same category.",
     "results.globalFilter.clearAll": "Clear all",
     "results.globalFilter.loadFilter": "Load filter",
     "results.globalFilter.activeFilters": "{filtersCount} active filters",
     "results.globalFilter.activeFilter": "{filtersCount} active filter",
     "results.globalFilter.fillerText": "Filtering",
     "results.globalFilter.recent": "Recent",
-    "results.globalFilter.genericFilter": "Generic",
+    "results.globalFilter.genericFilter": "Elements",
+    "results.globalFilter.substationOrVoltageLevelFilter": "Substations and voltage levels",
+    "results.globalFilter.elementsHelp": "Those filters exclude other elements type",
     "results.globalFilter.country": "Countries",
     "results.globalFilter.voltageLevel": "Voltage levels",
     "results.globalFilter.nonApplicable": "Filtering {filterName} is not applicable for the current results table and is inactive",
