Add export network to GridExplore option (#3553)
Signed-off-by: basseche <bassel.el-cheikh_externe@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -206,6 +206,7 @@
     "VoltageinitNodeName": "Node : {nodeName}",
     "VoltageinitDate": "Computation date : {computationDate}",
 
+    "Select": "Select",
     "SelectAll": "All",
     "UnselectAll": "None",
 
@@ -1454,6 +1455,7 @@
     "pccMinError": "An error occurred when executing the pcc min",
     "PccMinResultsError": "An error occurred when exporting pcc min N-1 results",
     "NoFilter": "No filter",
+    "NoFolder": "No folder",
     "searchPlaceholder": "Search",
     "searchPlaceholderLog": "Search in Logs",
     "searchPlaceholderLogsTreeStructure": "Search in tree structure",
@@ -1725,6 +1727,11 @@
     "reset": "Reset",
     "history": "History",
     "activePowerControlTooltip": "Slack bus active power repartition key: maxP/droop, default droop = 4 (used if balanceType is PROPORTIONAL_TO_GENERATION_P_MAX)",
+
+    "gridExplore": "GridExplore",
+    "myComputer": "My computer",
+    "destination": "Destination",
+
     "ActivePower": "P (MW)",
     "reactivePowerTooltip": "Q (Mvar)",
     "tooltip.u": "U (kV)",
